# arena-dnpbmf

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/grafana/: dashboards.yml  datasources.yml
infrastructure/docker/grafana/dashboards/: application.json  infrastructure.json
infrastructure/docker/nginx/: default.conf  nginx.conf  ssl.conf
infrastructure/docker/prometheus/: prometheus.yml
infrastructure/scripts/: backup-db.sh  deploy.sh  healthcheck.sh  init-db.sh  restore-db.sh  rollback.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
src/backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
src/backend/api/: __init__.py  apps.py  urls.py
src/backend/api/v1/: __init__.py
src/backend/api/v1/auth/: __init__.py  serializers.py  urls.py  views.py
src/backend/api/v1/proposals/: __init__.py  serializers.py  urls.py  views.py
src/backend/api/v1/requests/: __init__.py  serializers.py  urls.py  views.py
src/backend/api/v1/vendors/: __init__.py  serializers.py  urls.py  views.py
src/backend/arena/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
src/backend/arena/settings/: __init__.py  base.py  development.py  production.py  staging.py
src/backend/core/: __init__.py  apps.py  constants.py  exceptions.py
src/backend/core/middleware/: __init__.py  correlation.py  logging.py  timing.py
src/backend/core/models/: __init__.py  base.py  mixins.py
src/backend/core/utils/: __init__.py  encryption.py  validators.py
src/backend/docs/: api.yaml  postman_collection.json  swagger.json
src/backend/integrations/: __init__.py
src/backend/integrations/anthropic/: __init__.py  client.py  exceptions.py  types.py
src/backend/integrations/aws/: __init__.py  s3.py  ses.py
src/backend/notifications/: __init__.py  apps.py  email.py
src/backend/notifications/templates/email/: magic_link.html  proposal_received.html  request_created.html
src/backend/proposals/: __init__.py  admin.py  apps.py  models.py  services.py  tasks.py
src/backend/proposals/tests/: __init__.py  factories.py  test_models.py  test_services.py
src/backend/realtime/: __init__.py  apps.py  consumers.py  middleware.py  routing.py
src/backend/requests/: __init__.py  admin.py  apps.py  models.py  services.py  tasks.py
src/backend/requests/tests/: __init__.py  factories.py  test_models.py  test_services.py
src/backend/scripts/: entrypoint.sh  start-celery.sh  start-server.sh
src/backend/users/: __init__.py  admin.py  apps.py  models.py  services.py
src/backend/users/tests/: __init__.py  factories.py  test_models.py  test_services.py
src/backend/vendors/: __init__.py  admin.py  apps.py  models.py  services.py
src/backend/vendors/tests/: __init__.py  factories.py  test_models.py  test_services.py
src/web/: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  index.html  jest.config.ts  jest.setup.ts  nginx.conf  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/web/public/: manifest.json  robots.txt
src/web/src/: App.test.tsx  App.tsx  index.tsx
(+143 files in other folders)
